sumo/tests/sumo/extended/emitter/errors/vtypedist/testsuite.sumo
# Tests what happens if the id is missing
missing_id

# Tests what happens if the id is empty
empty_id

# Tests what happens if the id is not known
false_id


# Tests what happens if the probability is missing
missing_prob

# Tests what happens if the probability is empty
empty_prob

# Tests what happens if the probability is not numeric
false_prob

# Tests what happens if the probability is negative
negative_prob


